feat: create book evaluations list
